<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="titulo_producto_fila">Titulo!</string>
    <string name="costo_producto_fila">Costo</string>
    <string name="refresh">Refresh</string>
    <string name="sin_datos">Sin datos</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Login</item>
        <item>My Products</item>
        <item>Publish</item>
        <item>Messages</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_login</item>
        <item>@drawable/ic_products</item>
        <item>@drawable/ic_publish</item>
        <item>@drawable/ic_messages</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Hint campos -->
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnNewUser">Crear Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="re_pwd">Confirma Password</string>

    <!-- Opciones mis productos -->
    <string name="context_menu_my_products">Que desea hacer?</string>
    <string name="context_menu_sold">Ya lo he vendido</string>
    <string name="context_menu_remove">Quiero eliminarlo</string>
    <string name="title_activity_msg_chat_users">Usuarios</string>
    <string name="title_activity_msg_user">Mensajes</string>
    <string name="title_activity_detalle_producto">Detalle</string>
    <string name="title_activity_negociar">Negociar</string>

    <string-array name="tipo_moneda">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>

</resources>