<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
        android:id="@+id/icoProducto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/picture" android:contentDescription="@string/app_name"/>

        <ProgressBar
            android:id="@+id/pbRowProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/icoProducto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTituloProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_producto_fila"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtCostoProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:text="@string/costo_producto_fila"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>
