<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/txtPwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/pwd"
                            android:inputType="textPassword" >

                            <requestFocus />
                        </EditText>

                        <Button
                            android:id="@+id/btnIngrear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnIngresar" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/nombre"
                            android:inputType="textPersonName" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/txtApellido"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/apellido"
                            android:inputType="textPersonName" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/txtEmailNewUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/txtPwdNewUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/pwd"
                            android:inputType="textPassword" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/txtRePwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/re_pwd"
                            android:inputType="textPassword" >

                            <requestFocus />
                        </EditText>

                        <Button
                            android:id="@+id/btnNewUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btnNewUser" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>